# liberty

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE.md  README.md  astro.config.mjs  index.html  merge-docs.mjs  mkdocs.yaml  package-lock.json  package.json  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml
0-root/logic/: index.html
1-spore/guide-spore/: index.html
1-spore/handshake/: index.html
2-pod/guide-pod/: index.html
2-pod/template/: index.html
3-mycelium/guide-mycelium/: index.html
3-mycelium/pact/: index.html
bootstrapping/: index.html
docs/: bootstrapping.md  index.md
docs/.obsidian/: app.json
docs/0-root/: logic.md
docs/1-spore/: guide-spore.md  handshake.md
docs/2-pod/: guide-pod.md  template.md
docs/3-mycelium/: guide-mycelium.md  pact.md
search/: search_index.json
src/styles/: custom.css
