[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mycelium-protocol"
version = "1.2.0"
description = "A fractal social operating system for coordination and resonance."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Nathan R", email = "moso.nate.r@gmail.com" }
]
keywords = ["protocol", "decentralized", "mycelium", "social-os"]
dependencies = [
    "mkdocs-material>=9.0.0",
    "mkdocs-pdf-export-plugin>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/community-chests/liberty"
Documentation = "https://community-chests.github.io/liberty"

[tool.setuptools]
packages = []
